Fix compile errors due to using features of newer JDKs than 1.8